--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,10 +47,10 @@ build:
     - name: Docker Login
       run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Docker Push
-      run: |
-        echo "Running unit tests..."
-        cd api-gateway
-        docker push evaldas483/applicatus-api-gateway
+    # - name: Docker Push
+    #   run: |
+    #     echo "Running unit tests..."
+    #     cd api-gateway
+    #     docker push evaldas483/applicatus-api-gateway
 
   # Additional jobs can be added based on your GitLab CI/CD configuration.
