--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         echo "Running Build"
         cd api-gateway
-        mvn clean install -DskipTests -e
+        gradlew clean install -DskipTests -e
         echo "Running Build for Gateway Test"
         echo $JAVA_HOME
         chmod +x gradlew
