--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,27 +9,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+    # steps:
+    # - name: Checkout Repository
+    #   uses: actions/checkout@v2
 
-    - name: Build API Gateway
-      run: |
-        echo "Running Build"
-        cd api-gateway
-        ./gradlew clean install -DskipTests -e
-        echo "Running Build for Gateway Test"
-        echo $JAVA_HOME
-        chmod +x gradlew
-        ./gradlew clean build
-        echo "Build complete."
+    # - name: Build API Gateway
+    #   run: |
+    #     echo "Running Build"
+    #     cd api-gateway
+    #     ./gradlew clean install -DskipTests -e
+    #     echo "Running Build for Gateway Test"
+    #     echo $JAVA_HOME
+    #     chmod +x gradlew
+    #     ./gradlew clean build
+    #     echo "Build complete."
 
-    - name: Unit Test
-      run: |
-        echo "Running unit tests... This will take about 60 seconds."
-        cd api-gateway
-        gradlew test
-        echo "Code coverage test complete"
+  build-gradle-project:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout project sources
+        uses: actions/checkout@v3
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Run build with Gradle Wrapper
+        run: ./gradlew build
+
+    # name: Unit Test
+    #   run: |
+    #       echo "Running unit tests... This will take about 60 seconds."
+    #       cd api-gateway
+    #       gradlew test
+    #       echo "Code coverage test complete"
 
   # docker_push:
   #   needs: build
