--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Run build with Gradle Wrapper
         run: |
             echo dir
-            cd ./
-            cd ./
+            cd ../
+            cd /.api-gateway
             ./gradlew build
 
     # name: Unit Test
