--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
             echo "switched `pwd`"
             cd ./api-gateway
             echo "switched `pwd`"
-            ./gradlew build
+            gradle build
 
     # name: Unit Test
     #   run: |
