--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout
 
     # - name: Build API Gateway
     #   run: |
@@ -28,14 +28,15 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - name: Checkout project sources
-        uses: actions/checkout@v3
+        uses: actions/checkout
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action
       - name: Run build with Gradle Wrapper
         run: |
             echo "switched `pwd`"
             cd ./api-gateway
             echo "switched `pwd`"
+            gradle install
             gradle build
 
     # name: Unit Test
