--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     
     steps:
     - name: Checkout Repository
-      uses: actions/checkout
+      uses: actions/checkout@v2
 
     # - name: Build API Gateway
     #   run: |
@@ -28,9 +28,9 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - name: Checkout project sources
-        uses: actions/checkout
+        uses: actions/checkout@v2
       - name: Setup Gradle
-        uses: gradle/gradle-build-action
+        uses: gradle/gradle-build-action@v2
       - name: Run build with Gradle Wrapper
         run: |
             echo "switched `pwd`"
