--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,14 @@ jobs:
     #     ./gradlew clean build
     #     echo "Build complete."
 
+    - name: Set up Java
+          uses: actions/setup-java@v2
+          with:
+            distribution: 'adopt'
+            java-version: '17'
+
   build-gradle-project:
-      runs-on: ubuntu-latest
+      runs-on: self-hosted
       steps:
       - name: Checkout project sources
         uses: actions/checkout@v2
