gateway cors config still editing

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -19,3 +19,12 @@ spring.sleuth.sampler.probability=1.0
 ##Security
 #spring.security.oauth2.resourceserver.jwt.jwk-set-uri = http://keycloak:8080/realms/master/protocol/openid-connect/certs
 #spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/spring-boot-microservices-realm
+
+#CORS !
+spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origins="http://localhost:3000"
+spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-methods=POST,GET,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-headers="*"
+
+
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origin-patterns=http://localhost:3000
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
