--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -32,3 +32,13 @@ spring.main.allow-bean-definition-overriding=true
 #
 ##spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origin-patterns=http://localhost:3000
 #spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+#Allows Combination of beans to continuesly coexsit with same name. But overrides eachother frequently
+#spring.main.allow-circular-references=true
+
+
+#eureka.client.fetch-registry=true
+#spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origin-patterns=http://localhost:3000
+#management.endpoints.web.cors.allowed-headers=*
+#management.endpoints.web.cors.allowed-methods=*
+#spring.cloud.gateway.default-filters=Access-Control-Allow-Origin
