--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,10 +8,9 @@ on:
 jobs:
   build:
     runs-on: self-hosted
-    
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     # - name: Build API Gateway
     #   run: |
@@ -30,13 +29,20 @@ jobs:
     #     distribution: 'adopt'
     #     java-version: '17'
 
+  
+
   build-gradle-project:
       runs-on: self-hosted
       steps:
       - name: Checkout project sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      - name: Set Execution Policy
+        run: |
+          Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
+          echo "Execution Policy set to Bypass for this process."
+        shell: pwsh
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
       - name: Run build with Gradle Wrapper
         run: |
             echo "switched `pwd`"
