--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,10 +36,10 @@ jobs:
       steps:
       - name: Checkout project sources
         uses: actions/checkout@v2
-      - name: Set Execution Policy
-        run: |
-          Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
-          echo "Execution Policy set to Bypass for this process."
+      # - name: Set Execution Policy
+      #   run: |
+      #     Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
+      #     echo "Execution Policy set to Bypass for this process."
         # shell: pwsh
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
