--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Build API Gateway
       run: |
         echo "Running Build"
+        Set-ExecutionPolicy -ExecutionPolicy Undefined -Scope LocalMachine
         cd api-gateway
         ./gradlew clean install -DskipTests -e
         echo "Running Build for Gateway Test"
